--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "jquery": "^3.2.1",
+    "truffle": "^4.1.14",
     "truffle-contract": "^3.0.1",
     "web3": "0.19.0"
   },
